fixed "#fiveDay" column alignment(, up HTML & JS;updated open-source link, relocated form element and h1 element; updated various styles and color changes CSS

--- a/src/style.css
+++ b/src/style.css
@@ -43,9 +43,13 @@ ul {
 }
 #weatherBody {
   max-width: 660px;
+  border: 2px dotted #ec6e4c;
+  padding: 20px;
+  border-radius: 10px;
 }
 .city-search {
-  position: fixed;
+  display: block;
+  text-align: center;
   top: 0;
   right: 0;
   margin: 0;
@@ -67,7 +71,7 @@ ul {
   border: none;
 }
 .today-box {
-  font-size: 43px;
+  font-size: 40px;
 }
 .date-time {
   font-size: 15px;
@@ -76,6 +80,19 @@ ul {
   line-height: 0.5;
 }
 .day-image {
+  border: none;
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
   border: none;
 }
 .tempLink {
@@ -113,6 +130,22 @@ span.temp {
   font-weight: 400;
 }
 
-.card {
-  width: 6rem;
+.hourlyCard {
+  width: 5rem;
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
+  border: 1px solid #ec6e4c;
+}
+.sourceCode {
+  color: #ffffff;
 }
